fixed spacing issues with h1s, container2s & container-meals

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,12 @@ body, html {
     font-size: 100px;
 }
 
+.clr {
+    /* prevents elements from overlapping floating elements*/
+    clear: both;
+    height: 56px;
+}
+
 .container-1 {
     text-align: center;
     width: 70%;
@@ -51,7 +57,9 @@ body, html {
 
 .container-2 {
     width: 70%;
+    height: 70%;
     margin: auto;
+    position: relative;
 }
 
 .container-2 a {
@@ -65,7 +73,9 @@ body, html {
 }
 
 .container-2 h1 {
-    margin-top: 100px;
+    position: relative;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .container-img {
@@ -83,21 +93,18 @@ body, html {
 
 .container-meal {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 10px;
     /*makes sure parent div is as big as child div*/
     overflow: auto;
+    position: relative;
 }
 
 .container-meal a {
     /*why wont this work?!*/
-    position: relative;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
-}
-
-.center {
-    margin: auto;
 }
 
 .right {
